@@ -13,6 +13,11 @@ Change
 
 * list_fobt, list_cst, list_mammogram
   'include_uptodate' option (default TRUE)
+* filter out cancelled and 'reversal' services in $db$servicesRaw
+
+Fix
+
+* incorrect labelling of renal disease indication for influenza vaccination
 
 0.9.6 - 1st April 2020
 ======================
